# dices

./: .gitignore  main.py  pyproject.toml
notebooks/: 000.data.inspection.ipynb
src/: __init__.py  data.py  models.py  train.py  visualization.py
src/data/: data.py
src/models/: __init__.py  mobilenet_model.py  simple_cnn.py
src/training/: classifier.py  train_classifier.py
src/visualization/: visualization.py
