[tool.poetry]
name = "dice"
version = "0.1.0"
description = "Dice detector"
authors = ["Marek Załęcki <mzalecki.ignis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
torch = "^2.1.1"
torchvision = "^0.16.1"
pillow = "^10.1.0"
mlflow = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
